@@ -8,8 +8,11 @@ ubuntu-image (1.7+19.04ubuntu1) UNRELEASED; urgency=medium
   * Add support for the new prepare-image --snap=<snap>=<channel|risk> syntax,
     bump the snapd dependency to 2.38.  (LP: #1815580)
   * Print a deprecation warning when using the old --extra-snaps syntax.
+  * Ignore the new 'grain' field in the pyparted partitiontable structure
+    during unit-tests, as otherwise it's causing test failures for disco+.
+    (LP: #1826224)
 
- -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Tue, 23 Apr 2019 12:56:41 +0200
+ -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@ubuntu.com>  Wed, 24 Apr 2019 16:54:22 +0200
 
 ubuntu-image (1.6+19.04ubuntu1) disco; urgency=medium
 
